--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,17 @@
 language: python
-
-stages:
-  - test
-  - docs
-  
+ 
 python:
   - "3.4"
 
 install:
   - pip install -r requirements-dev.txt
 
-test:
-  stage: test
-  script:
-    - pylint -d R -d C -e missing-docstring sources
+jobs:
+  include:
+    -stage: test
+    script:
+      - pylint -d R -d C -e missing-docstring sources
  
-docs:
-  stage: docs
-  script:
-    - python -munittest discover -s tests
+    -stage: docs
+    script:
+      - python -munittest discover -s tests
